--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "next": "15.3.3",
+    "pokenode-ts": "^1.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
