--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "framer-motion": "^12.23.6",
     "next": "15.3.3",
     "pokenode-ts": "^1.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }, 
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
